# grepx-mongo-libs

./: pyproject.toml  requirements.txt  setup.py
core/: connection.py  document_factory.py  exceptions.py
specific/: aggregation_pipeline.py  change_streams.py
src/: app.py
src/advanced/: connection_pool.py  migration.py  model.py  transaction.py
src/core/: connection.py  constants.py  cursor.py  document.py  document_factory.py  named_tuple_factory.py  types.py
src/mongo_connection/: __init__.py
src/mongo_connection/advanced/: query_builder.py  schema.py
src/mongo_connection/core/: document_factory.py
src/mongo_connection/utilities/: uri.py
src/utilities/: cli.py
test/: README.md  example_mongodb_operations.py  test_setup.py
utilities/: __init__.py  cli.py
